--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "dotenv": "^6.0.0",
         "fs-extra": "^7.0.0",
         "ganache-cli": "^6.1.8",
         "mocha": "^5.2.0",
