--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "next": "^7.0.1",
         "react": "^16.5.2",
         "react-dom": "^16.5.2",
+        "semantic-ui-react": "^0.82.5",
         "solc": "^0.4.25",
         "truffle-hdwallet-provider": "0.0.6",
         "web3": "^1.0.0-beta.36"
