--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "mocha",
-        "dev": "next dev"
+        "dev": "node server.js"
     },
     "author": "",
     "license": "ISC",
@@ -15,6 +15,7 @@
         "ganache-cli": "^6.1.8",
         "mocha": "^5.2.0",
         "next": "^7.0.1",
+        "next-routes": "^1.4.2",
         "react": "^16.5.2",
         "react-dom": "^16.5.2",
         "semantic-ui-react": "^0.82.5",
